<resources>
    <string name="app_name">Montir</string>
    <string name="title_splash_screen">MONTIR: Monitoring Tidur</string>
    <string name="description_app_get_started">Lorem ipsum dolor sit amet consectetur. Neque sapien ullamcorper commodo quam amet ac in.</string>
    <string name="get_started_title_button">Get Started</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="error_empty_password">Password must be Filled!</string>
    <string name="error_password_more_8">Password must be greater than 8 characters!</string>
    <string name="email_tv">Email</string>
    <string name="password_tv">Password</string>
    <string name="login_button_title">Sign in</string>
    <string name="title_auth">MONTIR</string>
    <string name="montir_sign_up">MONTIR: Sign Up</string>
    <string name="age_input">Age</string>
    <string name="city_input">City</string>
    <string name="select_gender_input">Select Gender</string>
    <string name="height_input">Height</string>
    <string name="weight_input">Weight</string>
    <string name="sign_up_button">Sign up</string>
    <string name="doesn_t_have_an_account">Doesn\'t Have an Account?</string>
    <string name="sign_up_in_login">Sign up</string>
    <string name="sleep_bottom_app">Sleep</string>
    <string name="statistics_bottom_app">Statistics</string>
    <string name="music_bottom_app">Music</string>
    <string name="profile_bottom_app">Profile</string>
    <string name="bed_time">Bed Time</string>
    <string name="bed_time_value">10:00</string>
    <string name="alarm_text">Alarm</string>
    <string name="sleep_tracker_btn">Sleep Tracker</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="sleep_sounds">Sleep Sounds</string>
    <string name="music_time_sleep_tracker">4.55</string>
    <string name="play_music_for_sleep_tracker">Play Music For Sleep Tracker</string>
    <string name="turn_off">Turn Off</string>
    <string name="snooze_alarm">Snooze</string>
    <string name="stop_tracker">Stop Tracker</string>
    <string name="sleep_time">10:00 Hours</string>
    <string name="perfect">Perfect</string>
    <string name="artist_music">Simple Plan</string>
    <string name="search_relate_music">Search relate music</string>
    <string name="banner_music">Banner Music</string>
    <string name="scoreapp">Score</string>
    <string name="score">Sleep Score</string>
    <string name="daysleep">Days of Sleep</string>
    <string name="daysleepscore">Score</string>
    <string name="profilset">Profile Setting</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="profilename">Name</string>
    <string name="lang">EN</string>
    <string name="saveChanges">Save Changes</string>
    <string name="gender">Gender</string>
    <string name="bmi">BMI Category</string>
    <string name="stress">Level Stress</string>
    <string name="accountset">Account Setting</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sleepDur">Sleep Durations</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="averagetitle">Average Sleep Time</string>
    <string name="aveTime">8 Hours 5 Minutes</string>
    <string name="detailStatistic">Detail Statistics</string>
    <string name="username">Username</string>
    <string name="stress_level">Stress Level</string>
    <string name="desc_stress_dialog">Seberapa Stress Kamu Hari ini? Guna Meningkatkan Perhitungan Sleep Scrore Kamu</string>
    <string name="perbaiki_dan_upgrade_kualitas_tidurmu_dengan_montir">Perbaiki dan Upgrade Kualitas Tidurmu dengan MONTIR</string>
    <string name="save">Save</string>
    <string name="bedCount">7h 43m</string>
    <string name="inbed">In Bed</string>
    <string name="asleep">Asleep</string>
    <string name="sleepCount">7h 15m</string>
    <string name="youhad">You Had</string>
    <string name="soundSleep">Sound Sleep</string>
    <string name="logout">Log out</string>

    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
        FHD AMOLED at 441ppi\n
        2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
        Standby time (LTE): up to 19 days\n
        Talk time (3g/WCDMA): up to 26 hours\n
        Internet use time (Wi-Fi): up to 13 hours\n
        Internet use time (LTE): up to 13 hours\n
        Video playback: up to 13 hours\n
        Audio playback (via headset): up to 110 hours\n
        Fast charging: up to 7 hours of use from only 15 minutes of charging
        Standby time (LTE): up to 19 days\n
        Talk time (3g/WCDMA): up to 26 hours\n
        Internet use time (Wi-Fi): up to 13 hours\n
        Internet use time (LTE): up to 13 hours\n
        Video playback: up to 13 hours\n
        Audio playback (via headset): up to 110 hours\n
        Fast charging: up to 7 hours of use from only 15 minutes of charging
    </string>
    <string name="title">Google Pixel</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Narenda Wicaksono</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$735</string>
    <string name="dummy_photos">6 photos</string>
</resources>